removing coord_flip function

--- a/index.Rmd
+++ b/index.Rmd
@@ -398,25 +398,23 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   ylab("Mother tongue (Number of Canadians residents)")
 ```
 
-In figure \@ref(fig:barplot-mother-tongue-labs), the x labels overlap, making it challenging to read the different languages. One solution is to rotate the plot, so the bars are horizontal, and thus the labels will be more readable. We can again add additional layers to the plot object using the `+` symbol to add the `coord_flip` function, which swaps the x and y coordinate axes:
+In figure \@ref(fig:barplot-mother-tongue-labs), the x labels overlap, making it challenging to read the different languages. One solution is to rotate the plot, so the bars are horizontal, and thus the labels will be more readable. We will swap the x and y coordinate axes:
 
 ```{r barplot-mother-tongue-flipped, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
-ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
+ggplot(ten_lang, aes(x = mother_tongue, y = language)) +
   geom_bar(stat = "identity") +
-  xlab("Language") +
-  ylab("Mother tongue (Number of Canadians residents)") +
-  coord_flip()
+  xlab("Mother tongue (Number of Canadians residents)") +
+  ylab("Language") 
 ```
 
 
 From figure \@ref(fig:barplot-mother-tongue-flipped), we have answered our initial question. However, our visualization could be made more transparent by organizing the bars according to the number of Canadian residents reporting each language rather than in alphabetical order. We can reorder the bars using the `reorder` function, which orders a variable (here `language`) based on the values of the second variable (`mother_tongue`):
 
 ```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
-ggplot(ten_lang, aes(x = reorder(language, mother_tongue), y = mother_tongue)) +
+ggplot(ten_lang, aes(x = mother_tongue, y = reorder(language, mother_tongue))) +
   geom_bar(stat = "identity") +
-  xlab("Language") +
-  ylab("Mother tongue (Number of Canadians residents)") +
-  coord_flip()
+  xlab("Mother tongue (Number of Canadians residents)") +
+    ylab("Language") 
 ```
 
 From figure \@ref(fig:barplot-mother-tongue-reorder), we have answered our question since we can see what the ten most often reported Aboriginal languages were according to the 2016 Candian census and how many people speak them. For instance, we can see that the Aboriginal language most often reported was Cree n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
@@ -441,13 +439,12 @@ arranged_lang <- arrange(aboriginal_lang, by = desc(mother_tongue))
 ten_lang <- slice(arranged_lang, 1:10)
 
 ggplot(ten_lang, aes(
-  x = reorder(language, mother_tongue),
-  y = mother_tongue
+  x = mother_tongue,
+  y = reorder(language, mother_tongue)
 )) +
   geom_bar(stat = "identity", fill = "steelblue") +
-  xlab("Language") +
-  ylab("Mother tongue (Number of Canadians residents)") +
-  coord_flip() +
+  xlab("Mother tongue (Number of Canadians residents)") +
+  ylab("Language") +
   theme_bw() # use a theme to have a white background
 ```
 
