removing words like course, student, replaced sample_n function with slice_random

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -54,8 +54,7 @@ where only two classes are involved (e.g. disease or healthy patient), or
 multiclass classification, which involves assigning an object to one of several
 classes (e.g., private, public, or not for-profit organization). Here we will
 focus on the simple, widely used **K-nearest neighbours** algorithm for the
-binary classification problem. Other examples you may encounter in future
-courses include decision trees, support vector machines (SVMs), logistic
+binary classification problem. Other examples you may encounter in the future include decision trees, support vector machines (SVMs), logistic
 regression, and neural networks.
 
 ## Exploring a labelled data set
@@ -775,7 +774,7 @@ of the benign observations.
 set.seed(3)
 rare_cancer <- bind_rows(
   filter(cancer, Class == "B"),
-  cancer %>% filter(Class == "M") %>% sample_n(3)
+  cancer %>% filter(Class == "M") %>% slice_sample(n = 3)
 ) %>%
   select(Class, Perimeter, Concavity)
 
@@ -786,8 +785,9 @@ rare_plot <- rare_cancer %>%
   scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
 rare_plot
 ```
+> The `slice_sample` function takes two arguments: a data frame-like object to sample from and the number of rows to be randomly selected (`n`).
 
-> Note: You will see in the code above that we use the `set.seed` function. This is because we are using `sample_n` to artificially pick
+> Note: You will see in the code above that we use the `set.seed` function. This is because we are using `slice_sample` to artificially pick
 > only 3 of the malignant tumour observations, which uses random sampling to choose which rows will be in the training set. In order to
 > make the code reproducible, we use `set.seed` to specify where the random number generator starts for this 
 > process, which then guarantees the same result, i.e., the same choice of 3 observations, each time the code is run. In general, when your
