--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -12,7 +12,7 @@ concludes with an example using *multivariate linear regression* when there is m
 predictor.
 
 ## Chapter learning objectives 
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 * Perform linear regression in R using `tidymodels` and evaluate it on a test data set.
 * Compare and contrast predictions obtained from K-nearest neighbour regression to those obtained using simple ordinary least squares regression from the same dataset.
@@ -316,7 +316,7 @@ match the actual observed values very well. Such a model would probably have a
 quite high RMSE when assessing model goodness of fit on the training data and
 a quite high RMPSE when assessing model prediction quality on a test data
 set. On such a data set, K-NN regression may fare better. Additionally, there
-are other types of regression you can learn about in future courses that may do
+are other types of regression you can learn about in future books that may do
 even better at predicting with such data.
 
 How do these two models compare on the Sacramento house prices data set? On 
@@ -476,7 +476,7 @@ In practice, when  you want to compare several regression models with
 differing numbers of predictor variables, you should use
 cross-validation on the training set only; in this case choosing the model is part
 of tuning, so you cannot use the test data. There are several well known and more advanced
-methods to do this that are beyond the scope of this course, and they include
+methods to do this that are beyond the scope of this book, and they include
 backward or forward selection, and L1 or L2 regularization (also known as Lasso
 and ridge regression, respectively).
 
@@ -491,7 +491,7 @@ variable), we might also be interested in describing the
 individual effects of house size and the number of bedrooms on house price,
 quantifying how big each of these effects are, and assessing how accurately we
 can estimate each of these effects. This side of regression is the topic of
-many follow-on statistics courses and beyond the scope of this course.
+many follow-on statistics books and beyond the scope of this book.
 
 ## Additional resources
 - The [`tidymodels` website](https://tidymodels.org/packages) is an excellent reference for more details on, and advanced usage of, the functions and packages in the past two chapters. Aside from that, it also has a [nice beginner's tutorial](https://www.tidymodels.org/start/) and [an extensive list of more advanced examples](https://www.tidymodels.org/learn/) that you can use to continue learning beyond the scope of this book. 
