--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -23,7 +23,7 @@ This chapter provides an introduction to clustering using the *K-means* algorith
 including techniques to choose the number of clusters.
 
 ## Chapter learning objectives 
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 * Describe a case where clustering is appropriate, and what insight it might extract from the data.
 * Explain the K-means clustering algorithm.
