--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -19,7 +19,7 @@ response variable of interest, but the end of the chapter shows how to perform
 *multivariate regression*, i.e., regression with more than one predictor variable.
 
 ## Chapter learning objectives 
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 * Recognize situations where a simple regression analysis would be appropriate for making predictions.
 * Explain the K-nearest neighbour (K-NN) regression algorithm and describe how it differs from K-NN classification.
@@ -116,15 +116,11 @@ how well it predicts house price. This subsample is taken to allow us to
 illustrate the mechanics of K-NN regression with a few data points; later in
 this chapter we will use all the data.
 
-To take a small random sample of size 30, we'll use the function `sample_n`.
-This function takes two arguments:
-
-1. `tbl` (a data frame-like object to sample from)
-2. `size` (the number of observations/rows to be randomly selected/sampled)
+To take a small random sample of size 30, we'll use the function `slice_sample`, and input the data frame to sample from and the number of rows to randomly select.
 
 ```{r 07-sacramento}
 set.seed(1234)
-small_sacramento <- sample_n(sacramento, size = 30)
+small_sacramento <- slice_sample(sacramento, n = 30)
 ```
 
 Next let's say we come across a  2,000 square-foot house in Sacramento we are
@@ -439,8 +435,7 @@ interpret. For now, let's consider this approach to thinking about RMSPE from
 our testing data set: as long as its not significantly worse than the cross-validation
 RMSPE of our best model, then we can say that we're not doing too much worse on
 the test data than we did on the training data. So the model appears to be
-generalizing well to a new data set it has never seen before. In future courses
-on statistical/machine learning, you will learn more about how to interpret RMSPE
+generalizing well to a new data set it has never seen before. If you learn more in the future about statistical/machine learning, you will learn more about how to interpret RMSPE
 from testing data and other ways to assess models.
 
 Finally, what does our model look like when we predict across all possible
