removing the word student

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -34,7 +34,7 @@ with the fundamental ideas of sampling from populations and then introduce two c
 *interval estimation*. 
 
 ## Chapter learning objectives 
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 * Describe real-world examples of questions that can be answered with the statistical inference.
 * Define common population parameters (e.g. mean, proportion, standard deviation) that are often estimated using sampled data, and estimate these from a sample.
