--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -8,7 +8,7 @@ prediction accuracy, and how to choose model parameters to maximize
 performance.
 
 ## Chapter learning objectives 
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 - Describe what training, validation, and test data sets are and how they are used in classification
 - Split data into training, validation, and test data sets
