--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -20,7 +20,7 @@ running; think of it like getting dressed in the morning!
 
 ## Chapter learning objectives
 
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 - use Jupyter to run, edit and write R code
 - open and view plain text data files in Jupyter
