--- a/index.Rmd
+++ b/index.Rmd
@@ -73,7 +73,7 @@ knitr::include_graphics("img/chapter_overview.jpeg")
 
 ## Overview
 
-This chapter provides an introduction to the R programming language. We will learn about some fundamental R topics and then go through an entire data analysis task! We will see how to read, clean, wrangle, and visualize some data to answer a specific question at a high level. Later in the book, we will learn each of these steps in more detail, but let's jump in now to see how much we can do with data science!
+This chapter provides an introduction to the R programming language. We will learn about some fundamental R topics and then go through an entire data analysis task! We will see how to load, clean, wrangle, and visualize some data to answer a specific question at a high level. Later in the book, we will learn each of these steps in more detail, but let's jump in now to see how much we can do with data science!
 
 ## Chapter Learning Objectives
 
@@ -163,7 +163,7 @@ Now that we have asked our question and identified the data we are using, we nee
 ## Loading a spreadsheet-like data set
 
 Almost always, the first step in data analysis is to load a data set into R. A data set is a collection of numbers or values and can come in many different forms! Tables in Microsoft Excel are an example of rectangular-shaped, spreadsheet-like data as shown in Figure \@ref(fig:img-spreadsheet-vs-dataframe).
-When we read this type of data into R, it is represented as a *data frame* object. Figure \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar to a spreadsheet where the rows are the collected observations (e.g. students), and the columns are the characteristics of those observations (e.g. grades). 
+When we load this type of data into R, it is represented as a *data frame* object. Figure \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar to a spreadsheet where the rows are the collected observations (e.g. students), and the columns are the characteristics of those observations (e.g. grades). 
 
 
 ```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850", fig.retina = 2}
@@ -181,7 +181,7 @@ head -n 10 data/can_lang.csv
 
 To load this data into R, so that we can do things with it (*e.g,* perform analyses or create data visualizations), we will need to use a *function.* 
 A function is a special word in R that takes instructions (we call these *arguments*) and does something. The function we will 
-use to read a `.csv` file into R is called `read_csv`.
+use to load a `.csv` file into R is called `read_csv`.
 
 In its most basic use-case, `read_csv` expects that the data file:
 
@@ -197,7 +197,7 @@ it. The place we will load it from is an R package. An R package is a collection
 of functions that once loaded, can be used in addition to the built-in R package
 functions. The `read_csv` function, in particular, can be made accessible through the
 `library` function by loading the `tidyverse` package [@wickham2019tidverse]. 
-`tidyverse` contains many functions, which allow us to read, clean, wrangle and visualize data. 
+`tidyverse` contains many functions, which allow us to load, clean, wrangle and visualize data. 
 
 ```{r load_tidyverse, message=T}
 library(tidyverse)
@@ -269,7 +269,7 @@ can_lang <- read_csv("data/can_lang.csv")
 ```
 
 Wait a minute, nothing happened this time! Or at least it looks like that? 
-But actually, something did happen! The data was read in 
+But actually, something did happen! The data was loaded in 
 and now has the name `can_lang` associated with it. 
 And we can use that name to access the data frame and do things with it. 
 We can type the name of the data frame to print the first few rows 
@@ -448,4 +448,4 @@ ggplot(ten_lang, aes(
   theme_bw() # use a theme to have a white background
 ```
 
-This exercise demonstrates the power of R. In relatively few lines of code, we performed an entire data science workflow with a highly effective data visualization! We asked a question, read the data into R, wrangled the data (using `filter`, `arrange` and `slice`) and created a data visualization to help answer our question.  In this chapter, you got a quick taste of the data science workflow, but we will learn each of these steps in more detail in the coming chapters! 
+This exercise demonstrates the power of R. In relatively few lines of code, we performed an entire data science workflow with a highly effective data visualization! We asked a question, loaded the data into R, wrangled the data (using `filter`, `arrange` and `slice`) and created a data visualization to help answer our question.  In this chapter, you got a quick taste of the data science workflow, but we will learn each of these steps in more detail in the coming chapters! 
