changing the first few paragraphs so they are good for beginners, removing or defining jargon such as base R, observation, etc

--- a/index.Rmd
+++ b/index.Rmd
@@ -56,16 +56,16 @@ analysis." In other words, we want to teach you how to do an analysis where
 someone else can easily reproduce the results of your analysis. Why is
 reproducibility necessary? It allows someone else to double-check and validate
 your work and creates transparency! We will use a programming language called R 
-[@Rlanguage]  as our reproducible tool to help us do data analysis. You will
+[@Rlanguage] as our reproducible tool to help us do data analysis. You will
 spend the first four chapters learning how to use the R to load, clean, wrangle
-(i.e. restructure the data, so it's in a useable format) and visualize data while
+(i.e. restructure the data, so it's in a usable format) and visualize data while
 answering descriptive and exploratory data analysis questions. The next
 six chapters illustrate how to answer
 predictive, exploratory and inferential data analysis questions with common methods
 in data science, including classification, regression, clustering and estimation.
 In the final chapters (\@ref(getting-started-with-jupyter) - \@ref(setting-up-your-own-computer)), we discuss how to edit and write R code with Jupyter (another reproducible tool), use version control for collaboration, and install and configure the software needed for data science on your own computer. Readers 
 may want to refer to these chapters earlier as they start exploring the examples 
-and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
+and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes what you will learn in each chapter of this book.
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
@@ -93,6 +93,7 @@ By the end of the chapter, readers will be able to:
 
 ## Ask a question 
 
+The second high-level goal in this book is to "identify and solve common problems in data science".
 The four common data science methods that are useful for answering predictive, exploratory and inferential data analysis questions covered in this book are:
 
 1. **Classification: predicting a class/category for a new observation.** This could answer a question such as whether a tumour is cancerous or benign given some tumour cell measurements?
@@ -103,7 +104,7 @@ The four common data science methods that are useful for answering predictive, e
 
 4. **Estimation: make a good guess of an average or a proportion for the wider population from a representative sample (group of people or units), and quantify how good that guess is.** This could answer a question such as what is the proportion of undergraduate students that own an iPhone?
 
-We map each of these methods to the broader data analysis question, listed in Table \@ref(tab:questions-table), they help answer and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. Causal or mechanistic questions in Table \@ref(tab:questions-table) are beyond the scope of this book.
+We will explain these methods in more detail later, and we will map each to the broader data analysis question (listed in Table \@ref(tab:questions-table)) they help answer and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. 
 
 
 Table: (\#tab:questions-table) Types of data analysis questions
@@ -119,10 +120,12 @@ Table: (\#tab:questions-table) Types of data analysis questions
 
 Source: [What is the question?](https://science.sciencemag.org/content/347/6228/1314) by Jeffery T. Leek, Roger D. Peng & [The Art of Data Science](https://leanpub.com/artofdatascience) by Roger Peng & Elizabeth Matsui
 
+> Causal or mechanistic questions in Table \@ref(tab:questions-table) are beyond the scope of this book.
 
 ## Canadian languages data set question
 
-Now that we've learned about different types of questions. We need some context with which to frame our question. 
+Now that we've learned about different types of questions. 
+We need some context with which to frame the question we want to ask. 
 
 Before the arrival of colonists, Indigenous peoples lived in Canada with their
 own cultures and many different languages. Many Aboriginal languages are unique
@@ -141,7 +144,8 @@ According to the 2016 census, more than 60 Aboriginal languages were reported as
 *What ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada, and how many people speak each of them?* 
 
 This question is an example of a *descriptive question* since we are summarizing 
-the characteristics of a data set without further interpretation. To answer this question, we may want to create a table or a visualization that shows us these ten languages and their associated counts. Now that we have asked our question, the next step is collecting or identifying the data set with which we will be working. 
+the characteristics of a data set without further interpretation. 
+To answer descriptive questions, we often want to summarize data usings numbers, table or graphs. For our specific question, we could create a table or a visualization that shows us ten languages and their associated counts. Now that we have asked our question, the next step is collecting or identifying the data set with which we will be working. 
  In this chapter, we will be working with a data set originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has language data collected in the 2016 Canadian census [@cancensus2016]. 
 
 In this data frame there are 214 rows (corresponding to the 214 languages recorded on the 2016 Canadian census) and 6 columns: 
@@ -158,12 +162,15 @@ In this data frame there are 214 rows (corresponding to the 214 languages record
 > **A note about the *data* in data science!** 
 > Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
 
-Now that we have asked our question and identified the data we are using, we need to use R to load the data, do some wrangling and visualize the data to answer this question!
+Now that we have asked our question and identified the data we are using, we will
+use R to load the data, do some wrangling (i.e. restructure the data into a usable format) and visualize the data to answer our question!
 
 ## Loading a spreadsheet-like data set
 
-Almost always, the first step in data analysis is to load a data set into R. A data set is a collection of numbers or values and can come in many different forms! Tables in Microsoft Excel are an example of rectangular-shaped, spreadsheet-like data as shown in Figure \@ref(fig:img-spreadsheet-vs-dataframe).
-When we load this type of data into R, it is represented as a *data frame* object. Figure \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar to a spreadsheet where the rows are the collected observations (e.g. students), and the columns are the characteristics of those observations (e.g. grades). 
+Almost always, the first step in data analysis is to load a data set into R. 
+A data set is a collection of numbers or values and can come in many different forms! 
+Tables in Microsoft Excel are an example of rectangular-shaped, spreadsheet-like data as shown in Figure \@ref(fig:img-spreadsheet-vs-dataframe).
+When we load this type of data into R, it is represented as a *data frame* object. Figure \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar to a spreadsheet where the rows are **observations** (the things that we collect the data on e.g. voters, cities etc.), and the columns are the characteristics of those observations (e.g. voters' political affiliation, cities' population etc.). 
 
 
 ```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850", fig.retina = 2}
@@ -190,14 +197,16 @@ In its most basic use-case, `read_csv` expects that the data file:
 - does not have row names.
 
 
+
 Below you'll see the code used to load the data into R using the `read_csv` 
-function. However, given that `read_csv` is not included in the base 
-installation of R, we will have to load it from somewhere else before we can use
-it. The place we will load it from is an R package. An R package is a collection
-of functions that once loaded, can be used in addition to the built-in R package
-functions. The `read_csv` function, in particular, can be made accessible through the
+function. However, the `read_csv` function is not included in the base installation of R, 
+meaning that it is not one of the primary functions ready to use when you install R. Therefore,
+you need to load it from somewhere else before you can use it. The place we will load it from is an R *package*. An R package is a collection
+of functions that can be used in addition to the built-in R package
+functions once loaded. The `read_csv` function, in particular, can be made accessible through the
 `library` function by loading the `tidyverse` package [@wickham2019tidverse]. 
 `tidyverse` contains many functions, which allow us to load, clean, wrangle and visualize data. 
+
 
 ```{r load_tidyverse, message=T}
 library(tidyverse)
@@ -215,7 +224,7 @@ read_csv("data/can_lang.csv")
 ```
 
 > **In case you want to know more (optional):** 
-> There is another function, which also loads csv files called `read.csv`, which is a base R function (meaning we don't need to load a package to use it). Why are we using `read_csv` instead of `read.csv`? We use the `read_csv` function from the `tidyverse` because it's faster, and it has other advantages, such as a more readable format when printing the data frame.  
+> There is another function, which also loads csv files called `read.csv`, which is a *base* R function, so we don't need to load a package to use it. Why are we using `read_csv` instead of `read.csv`? We use the `read_csv` function from the `tidyverse` because it's faster, and it has other advantages, such as a more readable format when printing the data frame. Therefore we will use `read_csv` from here on out. 
 
 ## Naming things in R
 
