--- a/index.Rmd
+++ b/index.Rmd
@@ -170,7 +170,7 @@ use R to load the data, do some wrangling (i.e. restructure the data into a usab
 Almost always, the first step in data analysis is to load a data set into R. 
 A data set is a collection of numbers or values and can come in many different forms! 
 Tables in Microsoft Excel are an example of rectangular-shaped, spreadsheet-like data as shown in Figure \@ref(fig:img-spreadsheet-vs-dataframe).
-When we load this type of data into R, it is represented as a *data frame* object. Figure \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar to a spreadsheet where the rows are **observations** (the things that we collect the data on e.g. voters, cities etc.), and the columns are the characteristics of those observations (e.g. voters' political affiliation, cities' population etc.). 
+When we load this type of data into R, it is represented as a *data frame* object. Figure \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar to a spreadsheet where the rows are **observations** (the things that we collect the data on e.g. voters, cities etc.), and the columns are **variables** (the characteristics of those observations e.g. voters' political affiliation, cities' population etc.). 
 
 
 ```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850", fig.retina = 2}
@@ -216,7 +216,7 @@ library(tidyverse)
 
 
 After loading the `tidyverse` package, we can call the `read_csv` function and 
-pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). In chapter \@ref(reading), we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
+pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case.
 
 
 ```{r load_can_lang_data, warning=F, message=F}
@@ -252,7 +252,8 @@ because we are formally telling R about this new word and giving it a value.
 Only characters and words that act as values (on `<-`'s right-hand side) 
 need to be surrounded by quotes.
 
-Object names can consist of letters, numbers, periods `.` and underscores `_`. Other symbols won't work in R since they have other meanings in R. For example, 
+Object names can consist of letters, numbers, periods `.` and underscores `_`. 
+Other symbols won't work since they have their own meanings in R. For example, 
 `+` is an addition symbol used to add numbers. If we try to assign a name with the `+` symbol to an object R will complain and we will get an error!
 
 ```{r, eval = F}
