defining tabular data and removing spreadsheet-like term as suggested by rev C

--- a/index.Rmd
+++ b/index.Rmd
@@ -165,11 +165,11 @@ In this data frame there are 214 rows (corresponding to the 214 languages record
 Now that we have asked our question and identified the data we are using, we will
 use R to load the data, do some wrangling (i.e. restructure the data into a usable format) and visualize the data to answer our question!
 
-## Loading a spreadsheet-like data set
+## Loading a tabular data set
 
 Almost always, the first step in data analysis is to load a data set into R. 
 A data set is a collection of numbers or values and can come in many different forms! 
-Tables in Microsoft Excel are an example of rectangular-shaped, spreadsheet-like data as shown in Figure \@ref(fig:img-spreadsheet-vs-dataframe).
+Tables in Microsoft Excel are an example of *tablular data*, which are rectangular-shaped, spreadsheet-like data as shown in Figure \@ref(fig:img-spreadsheet-vs-dataframe).
 When we load this type of data into R, it is represented as a *data frame* object. Figure \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar to a spreadsheet where the rows are **observations** (the things that we collect the data on e.g. voters, cities etc.), and the columns are **variables** (the characteristics of those observations e.g. voters' political affiliation, cities' population etc.). 
 
 
