removing note about messages from ch 2, going through rev c comments

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(message = FALSE)
 
 ## Overview 
 
-In this chapter, you’ll learn to read spreadsheet-like data of various formats into R from your local device and the web. “Reading” (or “loading”) is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a data frame) that R can easily access and manipulate. Thus reading data is the gateway to any data analysis; you won’t be able to analyze data unless you’ve loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. The more time you spend upfront matching the data reading method to the type of data you have, the less time you will have to devote to re-formatting, cleaning and wrangling your data (the second step to all data analyses). It’s like making sure your shoelaces are tied well before going for a run so that you don’t trip later on!
+In this chapter, you’ll learn to read tabular data of various formats into R from your local device and the web. “Reading” (or “loading”) is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a data frame) that R can easily access and manipulate. Thus reading data is the gateway to any data analysis; you won’t be able to analyze data unless you’ve loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. The more time you spend upfront matching the data reading method to the type of data you have, the less time you will have to devote to re-formatting, cleaning and wrangling your data (the second step to all data analyses). It’s like making sure your shoelaces are tied well before going for a run so that you don’t trip later on!
 
 ## Chapter learning objectives
 By the end of the chapter, readers will be able to:
@@ -104,7 +104,7 @@ See this video for another explanation:
 
 Now we will learn more about reading tabular data from a plain text file into R, as well as how to write tabular data to a file. 
 Last chapter, we learned about using the `tidyverse` `read_csv` function when reading files that match that function's expected defaults 
-(column names are present, and commas are used as the delimiter/separator between columns). In this section, we will learn how to read 
+(column names are present, and commas are used as the separator between columns). In this section, we will learn how to read 
 files that do not satisfy the default expectations of `read_csv`. 
 
 Before we jump into the cases where the data aren't in the expected default format for `tidyverse` and `read_csv`, let's revisit the more straightforward
@@ -123,17 +123,6 @@ data.
 ```{r, message = TRUE}
 library(tidyverse)
 ```
-
-> Note: it is normal and expected that a message is printed out after 
-loading the `tidyverse` and some packages. Generally, this message let's you
-know if functions from the different packages were loaded share the same name
-(which is confusing to R), and if so, which one you can access using just it's
-name (and which one you need to refer the package name and the function name to
-refer to it, this is called masking). Additionally, the `tidyverse` is a special
-R package - it is a meta-package that bundles together several
-related and commonly used packages. Because of this it lists the packages it 
-does the job of loading. In future when we load this package in this book we 
-will silence these messages to help with readability of the book.
 
 Next we use `read_csv` to load the data into R, and in that call we specify the
 relative path to the file.
@@ -231,11 +220,6 @@ If you do not specify to open the data file with an editor, then Jupyter will
 render a nice table for you and you will not be able to see the column
 delimiters, and therefore you will not know which function to use, nor
 which arguments to use and values to specify for them. 
-
-This is also demonstrated in the video below:
-
-<iframe width="840" height="473" src="https://www.youtube.com/embed/6orO4YMAyeQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 
 ## Reading data from an Microsoft Excel file
 
@@ -906,3 +890,4 @@ data you are requesting and how frequently you are making requests.
 - If you read the subsection on obtaining data from the web via scraping and APIs, we provide two companion tutorial video links:
     - [A brief video tutorial](https://www.youtube.com/embed/YdIWI6K64zo) on using the SelectorGadget tool to obtain desired CSS selectors for extracting the price and size data for apartment listings on CraigsList
     - [Another brief video tutorial](https://www.youtube.com/embed/O9HKbdhqYzk) on using the SelectorGadget tool to obtain desired CSS selectors for extracting Canadian city names and 2016 census populations from Wikipedia
+- [A brief video on Linux command line basics](https://www.youtube.com/embed/6orO4YMAyeQ) 
