moving message comment from ch2 to ch 1

--- a/index.Rmd
+++ b/index.Rmd
@@ -212,7 +212,22 @@ functions once loaded. The `read_csv` function, in particular, can be made acces
 library(tidyverse)
 ```
 > **In case you want to know more (optional):** 
-> Notice that we got some extra output from R saying `Attaching packages` and `Conflicts` below our code line. These are examples of *messages* in R, which give the user more information that might be handy to know. For example, in this message, R tells us which other packages it loads when it loads the `tidyverse` package (e.g. `ggplot2`) and the version number of each package. Its also telling us there are `Conflicts`, which sounds bad, but R is just telling us that different functions from different packages use the same name. For example, the `dplyr` and the `stats` package both use a function called `filter`. R is going to "mask" the `filter` function from the `stats` package, meaning that it will default to the `dplyr` version of this function. Messages are not errors, so you don't always need to do something when you see a message, but you should read a message and decide for yourself. We will "suppress" messages from now on in this book so that you won't see this extra output! 
+> Notice that we got some extra output from R saying `Attaching packages` and `Conflicts` below our code line. These are examples of *messages* in R, which give the user more information that might be handy to know. 
+It is normal and expected that a message is printed out after 
+loading the `tidyverse` and some packages. Generally, this message let's you
+know if functions from the different packages were loaded share the same name
+(which is confusing to R), and if so, which one you can access using just it's
+name (and which one you need to refer the package name and the function name to
+refer to it, this is called masking). For example, the `dplyr` and the `stats` 
+package both use a function called `filter`. R is going to "mask" the `filter`
+function from the `stats` package, meaning that it will default to the `dplyr` version of this function.
+> Additionally, `tidyverse` is a special
+R package - it is a meta-package that bundles together several
+related and commonly used packages. Because of this it lists the packages it 
+does the job of loading. For example, in this message, R tells us it loads the `ggplot2` package when it loads the `tidyverse` package. 
+ Messages are not errors, so generally you don't need to take action when you see a message, but you can read a message and decide for yourself. 
+In future when we load this package in this book we 
+will silence these messages to help with readability of the book.
 
 
 After loading the `tidyverse` package, we can call the `read_csv` function and 
